| Summary: | ASTERISK-28848: app_fax: Compile. | ||
| Reporter: | Alexander Traud (traud) | Labels: | fax |
| Date Opened: | 2020-04-22 12:34:42 | Date Closed: | 2020-04-24 05:19:58 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_fax |
| Versions: | 16.9.0 17.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {code}In file included from app_fax.c:34:
In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:94:37: error: called object type '<dependent type>' is not a function or function pointer if ((fir->history = (int16_t *) malloc(taps*sizeof(int16_t)))) ^ include/asterisk/astmm.h:160:41: note: expanded from macro 'malloc' Do_not_use_malloc__use_ast_malloc->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:113:5: error: use of undeclared identifier 'Do_not_use_free__use_ast_free_or_ast_std_free_for_remotely_allocated_memory' free(fir->history); ^ include/asterisk/astmm.h:162:2: note: expanded from macro 'free' Do_not_use_free__use_ast_free_or_ast_std_free_for_remotely_allocated_memory->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:213:32: error: called object type '<dependent type>' is not a function or function pointer fir->history = (int16_t *) malloc(taps*sizeof(int16_t)); ^ include/asterisk/astmm.h:160:41: note: expanded from macro 'malloc' Do_not_use_malloc__use_ast_malloc->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:228:5: error: use of undeclared identifier 'Do_not_use_free__use_ast_free_or_ast_std_free_for_remotely_allocated_memory' free(fir->history); ^ include/asterisk/astmm.h:162:2: note: expanded from macro 'free' Do_not_use_free__use_ast_free_or_ast_std_free_for_remotely_allocated_memory->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:261:30: error: called object type '<dependent type>' is not a function or function pointer fir->history = (float *) malloc(taps*sizeof(float)); ^ include/asterisk/astmm.h:160:41: note: expanded from macro 'malloc' Do_not_use_malloc__use_ast_malloc->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:270:5: error: use of undeclared identifier 'Do_not_use_free__use_ast_free_or_ast_std_free_for_remotely_allocated_memory' free(fir->history); ^ include/asterisk/astmm.h:162:2: note: expanded from macro 'free' Do_not_use_free__use_ast_free_or_ast_std_free_for_remotely_allocated_memory->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:94:37: error: use of undeclared identifier 'Do_not_use_malloc__use_ast_malloc' if ((fir->history = (int16_t *) malloc(taps*sizeof(int16_t)))) ^ include/asterisk/astmm.h:160:2: note: expanded from macro 'malloc' Do_not_use_malloc__use_ast_malloc->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:213:32: error: use of undeclared identifier 'Do_not_use_malloc__use_ast_malloc' fir->history = (int16_t *) malloc(taps*sizeof(int16_t)); ^ include/asterisk/astmm.h:160:2: note: expanded from macro 'malloc' Do_not_use_malloc__use_ast_malloc->fail(a) ^ In file included from app_fax.c:34: In file included from /usr/include/x86_64-linux-gnu/spandsp.h:62: /usr/include/spandsp/fir.h:261:30: error: use of undeclared identifier 'Do_not_use_malloc__use_ast_malloc' fir->history = (float *) malloc(taps*sizeof(float)); ^ include/asterisk/astmm.h:160:2: note: expanded from macro 'malloc' Do_not_use_malloc__use_ast_malloc->fail(a) ^{code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-22 12:34:42.894-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-04-24 05:19:59.821-0500 Change 14280 merged by Joshua Colp: app_fax: SpanDSP headers do not use ast_malloc; ignore that. [https://gerrit.asterisk.org/c/asterisk/+/14280|https://gerrit.asterisk.org/c/asterisk/+/14280] By: Friendly Automation (friendly-automation) 2020-04-24 05:20:10.897-0500 Change 14307 merged by Joshua Colp: app_fax: SpanDSP headers do not use ast_malloc; ignore that. [https://gerrit.asterisk.org/c/asterisk/+/14307|https://gerrit.asterisk.org/c/asterisk/+/14307] By: Friendly Automation (friendly-automation) 2020-04-24 05:20:25.026-0500 Change 14308 merged by Joshua Colp: app_fax: SpanDSP headers do not use ast_malloc; ignore that. [https://gerrit.asterisk.org/c/asterisk/+/14308|https://gerrit.asterisk.org/c/asterisk/+/14308] | ||